2005-12-11  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/goom/gstgoom.c:
	* gst/level/level-example.c: (main):
	* gst/smoothwave/demo-osssrc.c: (main):
	  Use audiotestsrc instead of sinesrc (#323798).

2005-12-11  Stefan Kost  <ensonic@users.sf.net>

	* sys/oss/gstosssink.c: (gst_oss_sink_class_init):
          more debug-func-ptr usage

2005-12-11  Zeeshan Ali <zeenix at gmail dot com>

	* gst/flx/flx_color.c: (flx_colorspace_convert):
	* gst/flx/flx_color.h:
	* gst/flx/flx_fmt.h:
	* gst/flx/gstflxdec.c: (flx_decode_chunks), (gst_flxdec_chain):
	* gst/flx/gstflxdec.h:
	  Now flxdec works on big-endian machines as well.

2005-12-11  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/debug/efence.c: (gst_efence_init), (gst_efence_chain),
	(gst_fenced_buffer_copy):
	  Make sure GST_BUFFER_DATA is set on fenced copied buffers; fix
	  GST_DEBUG crasher where GST_TIME_FORMAT was not used in
	  conjunction with GST_TIME_ARGS. Also, don't leak pad templates
	  and use GST_DEBUG_FUNCPTR for pad functions.

2005-12-10  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/flac/gstflacdec.c: (gst_flac_dec_base_init),
	(gst_flac_dec_class_init), (gst_flac_dec_init),
	(gst_flac_dec_metadata_callback), (gst_flac_dec_error_callback),
	(gst_flac_dec_eof), (gst_flac_dec_write), (gst_flac_dec_loop),
	(gst_flac_dec_convert_src), (gst_flac_dec_get_src_query_types),
	(gst_flac_dec_src_query), (gst_flac_dec_send_newsegment),
	(gst_flac_dec_handle_seek_event), (gst_flac_dec_src_event),
	(gst_flac_dec_change_state):
	* ext/flac/gstflacdec.h:
	  Rewrite flacdec a bit, so that even seeking might work now. Most
	  importantly, don't act upon any flow return values we get, just tell
	  the decoder everything's dandy and act on the flow return values
	  later on in the loop function. We don't want to mess up the internal
	  decoder state for non-fatal things like flushing pads etc. Other
	  than that, use GstSegment (segment seeks don't work yet though, but